<resources>
    <string name="app_name">Farmers Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="registerIntroText">Register</string>
    <string name="usernameHint">Username</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm password</string>
    <string name="firstNameHint">First name</string>
    <string name="lastNameHint">Last name</string>
    <string name="cityHint">City</string>
    <string name="addressHint">Address</string>
    <string name="phoneHint">Phone</string>
    <string name="registerButton">Register</string>
    <string name="loginText">Login</string>
    <string name="passwordHintLogIn">Password</string>
    <string name="emailHintLogIn">Email</string>
    <string name="signInButton">Sign in</string>

</resources>
